# FedGA

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  fl_ga_presentation.tex  gpu_test.py  plot_extrapolated.py  pyproject.toml  requirements.txt  resume_benchmark.py  run.py
.github/workflows/: ci.yml
LargeMarkets/: paper.md  ppt.tex
docs/: 1.md  2.md  proj_idea.md  report.md
results/: 10_50.csv  ppt.tex
src/fl_ga/: __init__.py  config.py  data_loader.py  fl_base.py  ga_selection.py  main.py  model.py  test_plot.py
tests/: test_fl.py  tests.py
